--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="..src/index.js"></script>
+    <script src="./src/index.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
