--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="https://github.com/SUBIKSHA-M/robos/blob/main/src/index.js"></script>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
