--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
     <div id="root"></div>
+    <script src="https://subiksha-m.github.io/robos/src/index.js">
+      You need to enable JavaScript to run this app.
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
